tests/regression/errors/basic/syntax_error_18.csd
// Syntax error test 18 - missing semicolon
sus x drip = 18
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
